welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:6: error: illegal start of statement
      die2:Double;=1
                  ^withoutDoubles:8: error: illegal start of statement
      die1:Double;=die1+1
                  ^