welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if (noDoubles==true && die1==die2) {
    if (die1==6) {
      die1:Double;1
    } else if (die2==6) {
      die2:Double;=1
    } else {
      die1:Double;=die1+1
    }  
  }
  return die1+die2
}